src/test/ui/confuse-field-and-method/issue-32128.stderr
error[E0599]: no method named `example` found for type `Example` in the current scope
  --> $DIR/issue-32128.rs:12:10
   |
LL | struct Example {
   | -------------- method `example` not found for this
...
LL |     demo.example(1);
   |          ^^^^^^^ field, not a method
help: to call the function stored in `example`, surround the field access with parentheses
   |
LL |     (demo.example)(1);
   |     ^            ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
